# drydock

./: .env.devcontainer.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/skills/: ws.md
.devcontainer/: Dockerfile  devcontainer.json  start-remote-control.sh  start-tailscale.sh
base/: .dockerignore  Dockerfile  README.md  add-allowed-domain.sh  build-and-push.sh  com.drydock.claude-remote.plist  com.drydock.plist  com.drydock.wsd.plist  drydock-desks.service  drydock-health-check.sh  drydock-wsd.service  drydock.service  init-firewall.sh  refresh-firewall-allowlist.sh  refresh-storage-mounts.sh  setup-storage-mounts.sh  start-egress-proxy.sh  start-litestream.sh  start-remote-control.sh  start-tailscale.sh  sync-aws-auth.sh  sync-claude-auth.sh  tmux.conf
docs/: changelog.md  daemon-supervision.md  egress-enforcement.md  employee-fleet-auth.md  getting-started.md  host-bootstrap.md  known-issues.md  roadmap-2026-05.md  secrets-design.md  secrets-roadmap.md  v2-design-capability-broker.md  v2-design-overview.md  v2-design-protocol.md  v2-design-state.md  v2-design-tailnet-identity.md  v2-design-vocabulary.md  v2-scope.md  vision.md  workspace-orchestration-spec-v1.md
scripts/: auditor-deadman  bootstrap-linux-host.sh  drydock-resume-desks  drydock-rpc  drydock-stop-desks  install-linux-services.sh  smoke-v2-daemon.sh
tests/: conftest.py  test_checkout.py  test_create_flow.py  test_destroy.py  test_devcontainer.py  test_formatter.py  test_overlay.py  test_project_config.py  test_registry.py  test_stop.py  test_worktree.py
(+281 files in other folders)
